syntax = "proto3";

package protos;

// 登录请求
message LoginReq {
  enum MsgId {None = 0; Id = 1001;}
  // 用户名
  string username = 1;
  // 密码
  string password = 2;
}

// 登录回复
message LoginAck {
  enum MsgId {None = 0; Id = 1002;}
  int32 code = 1;
}
